# genty-rosrelease

./: README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml  travis_checks.sh
debian/: changelog  control  gbp.conf  rules
indigo/: .travis.yml  CMakeLists.txt
jade/: package.xml
rpm/: ros-indigo-genty.spec  ros-jade-genty.spec  template.spec
